# videoseal

./: .dockerignore  .gitignore  Dockerfile  README_TRT.md  attenuation.py  convert.Dockerfile  convert_models.sh  detector.py  embedder.py  export.py  export_detector_trt.py  export_embedder_trt.py  main.py  pyproject.toml  requirements.txt  test.py  utils.py
.devcontainer/: devcontainer.json
src/: attenuation.py  detector_trt.py  embedder_trt.py  trt_models.py  utils.py
